--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>cc.fozone.validation</groupId>
 	<artifactId>fo-validation</artifactId>
-	<version>0.9.0.RELEASE</version>
+	<version>0.9.1</version>
 	<packaging>jar</packaging>
 
 	<name>Validation.FO</name>
@@ -125,11 +125,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>3.2.8.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
 			<version>3.2.8.RELEASE</version>
 		</dependency>
 	</dependencies>
